--- a/src/java/hc/并发容器.md
+++ b/src/java/hc/并发容器.md
@@ -616,3 +616,191 @@ put 方法流程:
 * 如果没有特殊情况，则利用 synchronized 锁写入数据。
 * 如果数量大于 TREEIFY_THRESHOLD（8） 则要转换为红黑树。
 * 插入完成，我们判断一下是不是要扩容，并记录一下Node数量;方便统计
+
+## ConcurrentLinkedQueue
+
+一个基于链接节点的无界线程安全队列，它采用先进先出的规则对节点进行排序，当我们添加一个元素的时候，它会添加到队列的尾部，当我们获取一个元素时，它会返回队列头部的元素
+
+### 架构图
+
+![](../../resources/java/collection/ConcurrentLinkedQueue.png)
+
+### 源码
+```java
+public class ConcurrentLinkedQueue<E> extends AbstractQueue<E>
+        implements Queue<E>, java.io.Serializable {
+    transient volatile Node<E> head;
+    private transient volatile Node<E> tail;
+
+    private static final VarHandle HEAD;
+    private static final VarHandle TAIL;
+    static final VarHandle ITEM;
+    static final VarHandle NEXT;
+
+    public ConcurrentLinkedQueue() {
+        head = tail = new Node<E>();
+    }
+
+    static final class Node<E> {
+        volatile E item;
+        volatile Node<E> next;
+
+        /**
+         * Constructs a node holding item.  Uses relaxed write because
+         * item can only be seen after piggy-backing publication via CAS.
+         */
+        Node(E item) {
+            ITEM.set(this, item);
+        }
+
+        /** Constructs a dead dummy node. */
+        Node() {}
+
+        void appendRelaxed(Node<E> next) {
+            // assert next != null;
+            // assert this.next == null;
+            NEXT.set(this, next);
+        }
+
+        boolean casItem(E cmp, E val) {
+            // assert item == cmp || item == null;
+            // assert cmp != null;
+            // assert val == null;
+            return ITEM.compareAndSet(this, cmp, val);
+        }
+    }
+
+    public boolean add(E e) {
+        return offer(e);
+    }
+
+    // 入队
+    public boolean offer(E e) {
+        // 创建节点
+        final Node<E> newNode = new Node<E>(Objects.requireNonNull(e));
+
+        // 根据tail节点定位出尾节点
+        for (Node<E> t = tail, p = t;;) {
+            Node<E> q = p.next;
+            // 放入尾部
+            if (q == null) {
+                // p is last node
+                // 将新节点置为尾节点的下一个节点
+                if (NEXT.compareAndSet(p, null, newNode)) {
+                    // Successful CAS is the linearization point
+                    // for e to become an element of this queue,
+                    // and for newNode to become "live".
+                    if (p != t) // hop two nodes at a time; failure is OK
+                        TAIL.weakCompareAndSet(this, t, newNode);
+                    return true;
+                }
+                // Lost CAS race to another thread; re-read next
+            }
+            else if (p == q)
+                // We have fallen off list.  If tail is unchanged, it
+                // will also be off-list, in which case we need to
+                // jump to head, from which all live nodes are always
+                // reachable.  Else the new tail is a better bet.
+                p = (t != (t = tail)) ? t : head;
+            else
+                // 寻找尾节点
+                // Check for tail updates after two hops.
+                p = (p != t && t != (t = tail)) ? t : q;
+        }
+    }
+
+    // 出队
+    public E poll() {
+        restartFromHead: for (;;) {
+            for (Node<E> h = head, p = h, q;; p = q) {
+                final E item;
+                if ((item = p.item) != null && p.casItem(item, null)) {
+                    // Successful CAS is the linearization point
+                    // for item to be removed from this queue.
+                    if (p != h) // hop two nodes at a time
+                        updateHead(h, ((q = p.next) != null) ? q : p);
+                    return item;
+                }
+                else if ((q = p.next) == null) {
+                    updateHead(h, p);
+                    return null;
+                }
+                else if (p == q)
+                    continue restartFromHead;
+            }
+        }
+    }
+        
+}
+```
+
+## CopyOnWriteArrayList
+
+Copy-On-Write简称COW，是一种用于程序设计中的优化策略。
+其基本思路是，从一开始大家都在共享同一个内容，当某个人想要修改这个内容的时候，才会真正把内容Copy出去形成一个新的内容然后再改，这是一种延时懒惰策略
+
+CopyOnWrite并发容器用于读多写少的并发场景 比如: 白名单，黑名单，商品类目的访问和更新场景
+
+缺点:
+* 内存占用问题 因为CopyOnWrite的写时复制机制，所以在进行写操作的时候，内存里会同时驻扎两个对象的内存，旧的对象和新写入的对象
+
+* 数据一致性问题 只能保证数据的最终一致性，不能保证数据的实时一致性
+
+### 架构图
+
+![](../../resources/java/collection/CopyOnWriteArrayList.png)
+
+### 源码
+```java
+public class CopyOnWriteArrayList<E>
+    implements List<E>, RandomAccess, Cloneable, java.io.Serializable {
+
+    final transient Object lock = new Object();
+
+    // 容器
+    private transient volatile Object[] array;
+
+    final Object[] getArray() {
+        return array;
+    }
+
+    final void setArray(Object[] a) {
+        array = a;
+    }
+
+    // 默认构造器
+    public CopyOnWriteArrayList() {
+        setArray(new Object[0]);
+    }
+
+    // 获取元素
+    public E get(int index) {
+        return elementAt(getArray(), index);
+    }
+
+    static <E> E elementAt(Object[] a, int index) {
+        // 读的时候不需要加锁，如果读的时候有多个线程正在向CopyOnWriteArrayList添加数据，读还是会读到旧的数据
+        return (E) a[index];
+    }
+
+    public boolean add(E e) {
+        // 加锁
+        synchronized (lock) {
+            // 获取容器
+            Object[] es = getArray();
+            int len = es.length;
+            // 复制出新数组
+            es = Arrays.copyOf(es, len + 1);
+            // 把新元素添加到新数组里
+            es[len] = e;
+            // 把原数组引用指向新数组
+            setArray(es);
+            return true;
+        }
+    }
+}
+```
+
+## 参考
+
+[Java并发编程之ConcurrentLinkedQueue详解](https://blog.csdn.net/qq_38293564/article/details/80798310)
