--- a/src/java/hc/线程池.md
+++ b/src/java/hc/线程池.md
@@ -879,4 +879,469 @@ public static ExecutorService newWorkStealingPool(int parallelism) {
             null, true);
 }
 ```
-## ForkJoinPool
+
+## Fork/Join 框架
+
+![](../../resources/java/hc/3237432-9d288a21343bbd58.png)
+
+核心思想是将大的任务拆分成多个小任务（即fork），然后在将多个小任务处理汇总到一个结果上
+
+提供基本的线程池功能，支持设置最大并发线程数，支持任务排队，支持线程池停止，支持线程池使用情况监控，也是AbstractExecutorService的子类，主要引入了“工作窃取”机制，在多CPU计算机上处理性能更佳
+
+
+* ForkJoinPool 
+
+用于执行ForkJoinTask任务的执行池， 维护一个队列数组WorkQueue
+
+* WorkQueue
+
+双向列表,用于任务的有序执行,如果WorkQueue用于自己的执行线程Thread,线程默认将会从top端选取任务用来执行 - LIFO
+
+因为只有owner的Thread才能从top端取任务,所以在设置变量时, int top; 不需要使用 volatile
+
+* ForkJoinWorkThread
+
+用于执行任务的线程,用于区别使用非ForkJoinWorkThread线程提交的task;启动一个该Thread,会自动注册一个WorkQueue到Pool,这里规定,拥有Thread的WorkQueue只能出现在WorkQueue数组的奇数位
+
+* ForkJoinTask
+
+任务, 它比传统的任务更加轻量，不再对是RUNNABLE的子类,提供fork/join方法用于分割任务以及聚合结果
+
+
+### Work-Stealing 工作窃取算法
+
+### ForkJoinTask
+
+ForkJoinTask需要通过ForkJoinPool来执行
+
+ForkJoinTask可以理解为类线程但比线程轻量的实体, 在ForkJoinPool中运行的少量ForkJoinWorkerThread可以持有大量的ForkJoinTask和它的子任务.
+
+ForkJoinTask同时也是一个轻量的Future,使用时应避免较长阻塞和io
+
+使用ForkJoin框架，必须首先创建一个ForkJoin任务，提供在任务中执行fork()和join()操作的机制.
+
+子类:
+
+* RecursiveAction 用于没有返回结果的任务
+* RecursiveTask 用于有返回结果的任务。
+
+> Recursive [rɪˈkɜːsɪv]
+
+#### RecursiveTask.class
+
+有返回值
+
+```java
+public abstract class RecursiveTask<V> extends ForkJoinTask<V> {
+    private static final long serialVersionUID = 5232453952276485270L;
+
+    /**
+     * The result of the computation.
+     */
+    V result;
+
+    // 子类重写此方法
+    protected abstract V compute();
+
+    public final V getRawResult() {
+        return result;
+    }
+
+    protected final void setRawResult(V value) {
+        result = value;
+    }
+
+    protected final boolean exec() {
+        result = compute();
+        return true;
+    }
+
+}
+```
+
+#### RecursiveAction.class
+
+没有返回值
+
+```java
+public abstract class RecursiveAction extends ForkJoinTask<Void> {
+    protected abstract void compute();
+    public final Void getRawResult() { return null; }
+
+    protected final void setRawResult(Void mustBeNull) { }
+
+    protected final boolean exec() {
+        compute();
+        return true;
+    }
+}
+```
+`RecursiveAction` 和 `RecursiveTask`
+
+#### ForkJoinTask.class
+
+```java
+public abstract class ForkJoinTask<V> implements Future<V>, Serializable {
+    volatile int status;
+
+    // 分割函数
+    public final ForkJoinTask<V> fork() {
+        Thread t;
+        if ((t = Thread.currentThread()) instanceof ForkJoinWorkerThread)
+            // 放入队列
+            ((ForkJoinWorkerThread)t).workQueue.push(this);
+        else
+            ForkJoinPool.common.externalPush(this);
+        return this;
+    }
+
+    public final V join() {
+        int s;
+        if (((s = doJoin()) & ABNORMAL) != 0)
+            reportException(s);
+        return getRawResult();
+    }
+
+    public abstract V getRawResult();
+
+    // 获取当前任务的状态来判断返回什么结果
+    private int doJoin() {
+        int s; Thread t; ForkJoinWorkerThread wt; ForkJoinPool.WorkQueue w;
+
+        // 如果执行完毕，返回任务状态
+        return (s = status) < 0 ? s :
+            ((t = Thread.currentThread()) instanceof ForkJoinWorkerThread) ?
+            // 从任务数组里取出任务执行
+            (w = (wt = (ForkJoinWorkerThread)t).workQueue).
+            tryUnpush(this) && (s = doExec()) < 0 ? s :
+            // 
+            wt.pool.awaitJoin(w, this, 0L) :
+            externalAwaitDone();
+    }
+
+    final int doExec() {
+        int s; boolean completed;
+        if ((s = status) >= 0) {
+            try {
+                completed = exec();
+            } catch (Throwable rex) {
+                completed = false;
+                s = setExceptionalCompletion(rex);
+            }
+            if (completed)
+                s = setDone();
+        }
+        return s;
+    }
+
+    protected abstract boolean exec();
+
+    private int setDone() {
+        int s;
+        if (((s = (int)STATUS.getAndBitwiseOr(this, DONE)) & SIGNAL) != 0)
+            synchronized (this) { notifyAll(); }
+        return s | DONE;
+    }
+
+    // 适配器
+    static final class RunnableExecuteAction extends ForkJoinTask<Void> {
+        final Runnable runnable;
+        RunnableExecuteAction(Runnable runnable) {
+            if (runnable == null) throw new NullPointerException();
+            this.runnable = runnable;
+        }
+        public final Void getRawResult() { return null; }
+        public final void setRawResult(Void v) { }
+        public final boolean exec() { runnable.run(); return true; }
+        void internalPropagateException(Throwable ex) {
+            rethrow(ex); // rethrow outside exec() catches.
+        }
+        private static final long serialVersionUID = 5232453952276885070L;
+    }
+}
+```
+
+### ForkJoinPool.class
+
+ForkJoinTask需要通过ForkJoinPool来执行，任务分割出的子任务会添加到当前工作线程所维护的双端队列中，进入队列的头部
+
+#### 结构图
+
+![](../../resources/java/hc/ForkJoinPool.png)
+
+#### 原理
+
+```java
+public class ForkJoinPool extends AbstractExecutorService {
+    public static interface ForkJoinWorkerThreadFactory {
+        public ForkJoinWorkerThread newThread(ForkJoinPool pool);
+    }
+
+    // 线程工厂
+    private static final class DefaultForkJoinWorkerThreadFactory implements ForkJoinWorkerThreadFactory {
+
+        private static final AccessControlContext ACC = contextWithPermissions(
+            new RuntimePermission("getClassLoader"),
+            new RuntimePermission("setContextClassLoader"));
+
+        // 创建 ForkJoinWorkerThread 线程
+        public final ForkJoinWorkerThread newThread(ForkJoinPool pool) {
+            return AccessController.doPrivileged(
+                new PrivilegedAction<>() {
+                    public ForkJoinWorkerThread run() {
+                        return new ForkJoinWorkerThread(
+                            pool, ClassLoader.getSystemClassLoader()); }},
+                ACC);
+        }
+    }
+
+    // 工作队列
+    @jdk.internal.vm.annotation.Contended
+    static final class WorkQueue {
+
+        final void push(ForkJoinTask<?> task) {
+            ForkJoinTask<?>[] a;
+            int s = top, d, cap, m;
+            ForkJoinPool p = pool;
+            if ((a = array) != null && (cap = a.length) > 0) {
+                // 放入ForkJoinTask数组队列里
+                QA.setRelease(a, (m = cap - 1) & s, task);
+                top = s + 1;
+                if (((d = s - (int)BASE.getAcquire(this)) & ~1) == 0 && p != null) {                 // size 0 or 1
+                    VarHandle.fullFence();
+                    // 唤醒或创建一个工作线程执行任务
+                    p.signalWork();
+                }
+                else if (d == m)
+                    growArray(false);
+            }
+        }
+    }
+
+    public void execute(ForkJoinTask<?> task) {
+        externalSubmit(task);
+    }
+
+    public void execute(Runnable task) {
+        if (task == null)
+            throw new NullPointerException();
+        ForkJoinTask<?> job;
+        if (task instanceof ForkJoinTask<?>) // avoid re-wrap
+            job = (ForkJoinTask<?>) task;
+        else
+            // 转换成 ForkJoinTask
+            job = new ForkJoinTask.RunnableExecuteAction(task);
+        externalSubmit(job);
+    }
+
+    private <T> ForkJoinTask<T> externalSubmit(ForkJoinTask<T> task) {
+        Thread t; ForkJoinWorkerThread w; WorkQueue q;
+        if (task == null)
+            throw new NullPointerException();
+        if (((t = Thread.currentThread()) instanceof ForkJoinWorkerThread) &&
+            (w = (ForkJoinWorkerThread)t).pool == this &&
+            (q = w.workQueue) != null)
+            // 放入工作队列中
+            q.push(task);
+        else
+            externalPush(task);
+        return task;
+    }
+
+    final void externalPush(ForkJoinTask<?> task) {
+        int r;                                // initialize caller's probe
+        if ((r = ThreadLocalRandom.getProbe()) == 0) {
+            ThreadLocalRandom.localInit();
+            r = ThreadLocalRandom.getProbe();
+        }
+        for (;;) {
+            WorkQueue q;
+            int md = mode, n;
+            WorkQueue[] ws = workQueues;
+            if ((md & SHUTDOWN) != 0 || ws == null || (n = ws.length) <= 0)
+                throw new RejectedExecutionException();
+            else if ((q = ws[(n - 1) & r & SQMASK]) == null) { // add queue
+                int qid = (r | QUIET) & ~(FIFO | OWNED);
+                Object lock = workerNamePrefix;
+                ForkJoinTask<?>[] qa =
+                    new ForkJoinTask<?>[INITIAL_QUEUE_CAPACITY];
+                q = new WorkQueue(this, null);
+                q.array = qa;
+                q.id = qid;
+                q.source = QUIET;
+                if (lock != null) {     // unless disabled, lock pool to install
+                    synchronized (lock) {
+                        WorkQueue[] vs; int i, vn;
+                        if ((vs = workQueues) != null && (vn = vs.length) > 0 &&
+                            vs[i = qid & (vn - 1) & SQMASK] == null)
+                            vs[i] = q;  // else another thread already installed
+                    }
+                }
+            }
+            else if (!q.tryLockPhase()) // move if busy
+                r = ThreadLocalRandom.advanceProbe(r);
+            else {
+                if (q.lockedPush(task))
+                    signalWork();
+                return;
+            }
+        }
+    }
+
+    // 唤醒或创建一个工作线程执行任务
+    final void signalWork() {
+        for (;;) {
+            long c; int sp; WorkQueue[] ws; int i; WorkQueue v;
+            if ((c = ctl) >= 0L)                      // enough workers
+                break;
+            else if ((sp = (int)c) == 0) {            // no idle workers
+                if ((c & ADD_WORKER) != 0L)           // too few workers
+                    tryAddWorker(c);
+                break;
+            }
+            else if ((ws = workQueues) == null)
+                break;                                // unstarted/terminated
+            else if (ws.length <= (i = sp & SMASK))
+                break;                                // terminated
+            else if ((v = ws[i]) == null)
+                break;                                // terminating
+            else {
+                int np = sp & ~UNSIGNALLED;
+                int vp = v.phase;
+                long nc = (v.stackPred & SP_MASK) | (UC_MASK & (c + RC_UNIT));
+                Thread vt = v.owner;
+                if (sp == vp && CTL.compareAndSet(this, c, nc)) {
+                    v.phase = np;
+                    if (vt != null && v.source < 0)
+                        // 唤醒工作线程
+                        LockSupport.unpark(vt);
+                    break;
+                }
+            }
+        }
+    }
+
+    private void tryAddWorker(long c) {
+        do {
+            long nc = ((RC_MASK & (c + RC_UNIT)) |
+                       (TC_MASK & (c + TC_UNIT)));
+            if (ctl == c && CTL.compareAndSet(this, c, nc)) {
+                createWorker();
+                break;
+            }
+        } while (((c = ctl) & ADD_WORKER) != 0L && (int)c == 0);
+    }
+
+    // 创建工作线程
+    private boolean createWorker() {
+        ForkJoinWorkerThreadFactory fac = factory;
+        Throwable ex = null;
+        ForkJoinWorkerThread wt = null;
+        try {
+            if (fac != null && (wt = fac.newThread(this)) != null) {
+                wt.start();
+                return true;
+            }
+        } catch (Throwable rex) {
+            ex = rex;
+        }
+        deregisterWorker(wt, ex);
+        return false;
+    }
+
+    final void runWorker(WorkQueue w) {
+        int r = (w.id ^ ThreadLocalRandom.nextSecondarySeed()) | FIFO; // rng
+        w.array = new ForkJoinTask<?>[INITIAL_QUEUE_CAPACITY]; // initialize
+        for (;;) {
+            int phase;
+            if (scan(w, r)) {                     // scan until apparently empty
+                r ^= r << 13; r ^= r >>> 17; r ^= r << 5; // move (xorshift)
+            }
+            else if ((phase = w.phase) >= 0) {    // enqueue, then rescan
+                long np = (w.phase = (phase + SS_SEQ) | UNSIGNALLED) & SP_MASK;
+                long c, nc;
+                do {
+                    w.stackPred = (int)(c = ctl);
+                    nc = ((c - RC_UNIT) & UC_MASK) | np;
+                } while (!CTL.weakCompareAndSet(this, c, nc));
+            }
+            else {                                // already queued
+                int pred = w.stackPred;
+                Thread.interrupted();             // clear before park
+                w.source = DORMANT;               // enable signal
+                long c = ctl;
+                int md = mode, rc = (md & SMASK) + (int)(c >> RC_SHIFT);
+                if (md < 0)                       // terminating
+                    break;
+                else if (rc <= 0 && (md & SHUTDOWN) != 0 &&
+                         tryTerminate(false, false))
+                    break;                        // quiescent shutdown
+                else if (rc <= 0 && pred != 0 && phase == (int)c) {
+                    long nc = (UC_MASK & (c - TC_UNIT)) | (SP_MASK & pred);
+                    long d = keepAlive + System.currentTimeMillis();
+                    LockSupport.parkUntil(this, d);
+                    if (ctl == c &&               // drop on timeout if all idle
+                        d - System.currentTimeMillis() <= TIMEOUT_SLOP &&
+                        CTL.compareAndSet(this, c, nc)) {
+                        w.phase = QUIET;
+                        break;
+                    }
+                }
+                else if (w.phase < 0)
+                    LockSupport.park(this);       // OK if spuriously woken
+                w.source = 0;                     // disable signal
+            }
+        }
+    }
+}
+```
+
+#### ForkJoinWorkerThread.class
+
+```java
+public class ForkJoinWorkerThread extends Thread {
+    final ForkJoinPool pool;
+    final ForkJoinPool.WorkQueue workQueue;
+
+    protected ForkJoinWorkerThread(ForkJoinPool pool) {
+        super("aForkJoinWorkerThread");
+        this.pool = pool;
+        this.workQueue = pool.registerWorker(this);
+    }
+
+    public ForkJoinPool getPool() {
+        return pool;
+    }
+
+    public int getPoolIndex() {
+        return workQueue.getPoolIndex();
+    }
+
+    public void run() {
+        if (workQueue.array == null) { // only run once
+            Throwable exception = null;
+            try {
+                onStart();
+                pool.runWorker(workQueue);
+            } catch (Throwable ex) {
+                exception = ex;
+            } finally {
+                try {
+                    onTermination(exception);
+                } catch (Throwable ex) {
+                    if (exception == null)
+                        exception = ex;
+                } finally {
+                    pool.deregisterWorker(this, exception);
+                }
+            }
+        }
+    }
+
+    protected void onStart() {
+    }
+
+    protected void onTermination(Throwable exception) {
+    }
+}
+```
